--- a/src/main/webapp/WEB-INF/web.xml
+++ b/src/main/webapp/WEB-INF/web.xml
@@ -42,19 +42,12 @@
         <url-pattern>/*</url-pattern>
     </filter-mapping>
 
-    <!-- 日志记录的配置 -->
     <context-param>
-        <param-name>log4jConfigLocation</param-name>
-        <param-value>/WEB-INF/log4j.properties</param-value>
+        <param-name>logbackConfigLocation</param-name>
+        <param-value>classpath*:logback.xml</param-value>
     </context-param>
-    <context-param>
-        <!-- 日志页面的刷新间隔 -->
-        <param-name>log4jRefreshInterval</param-name>
-        <param-value>5000</param-value>
-    </context-param>
-    <!-- 日志监听器 -->
     <listener>
-        <listener-class>org.springframework.web.util.Log4jConfigListener</listener-class>
+        <listener-class>ch.qos.logback.ext.spring.web.LogbackConfigListener</listener-class>
     </listener>
 
     <welcome-file-list>
