--- a/pom.xml
+++ b/pom.xml
@@ -181,6 +181,11 @@
       <artifactId>fastjson</artifactId>
       <version>1.2.31</version>
     </dependency>
+    <dependency>
+      <groupId>net.coobird</groupId>
+      <artifactId>thumbnailator</artifactId>
+      <version>0.4.8</version>
+    </dependency>
   </dependencies>
   <build>
     <finalName>com.neworin.easynotes</finalName>
